Add concurrency to increment version job

--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -31,6 +31,9 @@ jobs:
   increment-version:
     name: increment-version
     runs-on: ubuntu-latest
+    concurrency:
+      group: version-concurrency
+      cancel-in-progress: false
     outputs:
       version: ${{ steps.setversion.outputs.version }}
       previous_version: ${{ steps.setversion.outputs.previous_version }}
