--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -31,6 +31,9 @@ jobs:
   increment-version:
     name: increment-version
     runs-on: ubuntu-latest
+    concurrency:
+      group: version-concurrency
+      cancel-in-progress: false
     outputs:
       version: ${{ steps.setversion.outputs.version }}
       previous_version: ${{ steps.setversion.outputs.previous_version }}
@@ -71,9 +74,27 @@ jobs:
       with:
         version: ${{ steps.previousversion.outputs.version }} 
 
+    - name: get git hashes
+      id: githashes
+      shell: bash
+      env:
+        VERSION_PREFIX: ${{ inputs.version-prefix }}
+      run: |
+        GIT_REF="HEAD"
+        PREVIOUS_TAG=${{ steps.previousversion.outputs.version }}
+        if [ -n "$GITHUB_HEAD_REF" ]; then
+            GIT_REF="origin/$GITHUB_HEAD_REF"
+        fi
+        HASH=$(git rev-parse --short ${GIT_REF})
+        LAST_TAG_HASH=$(git rev-parse --short ${VERSION_PREFIX}${PREVIOUS_TAG} || echo "does-not-exist" )
+
+        echo "current_hash=${HASH}" >> "$GITHUB_OUTPUT"
+        echo "previous_tag_hash=${LAST_TAG_HASH}" >> "$GITHUB_OUTPUT"
+       
+
     - name: Create tag
       uses: rickstaa/action-create-tag@v1
-      if: success() && (github.ref == inputs.main-branch && inputs.dry-run == false)
+      if: success() && (github.ref == inputs.main-branch && inputs.dry-run == false) && (steps.githashes.outputs.current_hash != steps.githashes.outputs.previous_tag_hash)
       id: create_tag
       with:
         tag: ${{ inputs.version-prefix }}${{ steps.semvers.outputs.patch }}
@@ -84,17 +105,23 @@ jobs:
       shell: bash
       run: |
         set -x
-        if [ "${{ inputs.main-branch }}" = "${{ github.ref }}" ]; then
-          echo "On main branch, setting next version"
-          echo "version=${{ steps.semvers.outputs.patch }}" >> "$GITHUB_OUTPUT"
-        else
-          echo "Not on main branch, setting previous version + hash"
-          GIT_REF="HEAD"
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-              GIT_REF="origin/$GITHUB_HEAD_REF"
-          fi
-          HASH=$(git rev-parse --short $GIT_REF)
-          echo "version=${{ steps.previousversion.outputs.version }}-$HASH" >> "$GITHUB_OUTPUT"
-        fi
-        echo "previous_version=${{ steps.previousversion.outputs.version }}" >> "$GITHUB_OUTPUT"
 
+        TAG=${{ steps.semvers.outputs.patch }}
+        PREVIOUS_TAG=${{ steps.previousversion.outputs.version }}
+ 
+        HASH=${{ steps.githashes.outputs.current_hash }}
+        LAST_TAG_HASH=${{ steps.githashes.outputs.previous_tag_hash }}
+
+        if [ "${HASH}" = "${LAST_TAG_HASH}" ]; then
+            echo "Tag already exists on this commit, setting previous version"
+            echo "version=${PREVIOUS_TAG}" >> "$GITHUB_OUTPUT"
+        else
+            if ["${{ inputs.main-branch }}" = "${{ github.ref }}" ]; then
+                echo "On main branch, setting next version"
+                echo "version=${TAG}" >> "$GITHUB_OUTPUT"
+            else
+                echo "Not on main branch, setting previous version + hash"
+                echo "version=${PREVIOUS_TAG}-${HASH}" >> "$GITHUB_OUTPUT"
+            fi
+        fi
+        echo "previous_version=${PREVIOUS_TAG}" >> "$GITHUB_OUTPUT"
