--- a/.github/workflows/platform-cd.yaml
+++ b/.github/workflows/platform-cd.yaml
@@ -49,7 +49,7 @@ jobs:
 
   tenants:
     name: tenants
-    uses: coreeng/p2p/.github/workflows/platform-execute-command.yaml@main
+    uses: ./.github/workflows/platform-execute-command.yaml
     secrets:
       cecg-registry-username: ${{ secrets.cecg-registry-username }}
       cecg-registry-secret: ${{ secrets.cecg-registry-secret }}
@@ -70,7 +70,7 @@ jobs:
 
   feature:
     name: Feature
-    uses: coreeng/p2p/.github/workflows/platform-execute-command.yaml@main
+    uses: ./.github/workflows/platform-execute-command.yaml
     needs: [changes, matrix]
     if: ${{ inputs.release_build == true || needs.changes.outputs.environments == 'true' }}
     secrets:
@@ -89,7 +89,7 @@ jobs:
 
   tenants-apply:
     name: tenants-yaml
-    uses: coreeng/p2p/.github/workflows/platform-execute-command.yaml@main
+    uses: ./.github/workflows/platform-execute-command.yaml
     needs: [tenants, changes]
     if: ${{ needs.changes.outputs.environments != 'true' && needs.changes.outputs.tenants == 'true' }}
     secrets:
