--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -93,6 +93,17 @@ jobs:
       dry-run: ${{ inputs.dry-run }}
       working-directory: ${{ inputs.working-directory }}
 
+  log:
+    name: log
+    needs: [nft-test, functional-test]
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo "Success: ${{ success() }}"
+          echo "GitHub.Ref: ${{ github.ref }}"
+          echo "Github.RefType: ${{ github.ref_type }}"
+          echo "Inputs.MainBranch: ${{ inputs.main-branch }}"
+          echo "Result: ${{ success() && ( github.ref == inputs.main-branch || github.ref_type == 'tag' ) }}"
   promote:
     name: promote
     needs: [nft-test, functional-test]
