feature(p2p): propagate `checkout-version` parameter to outer workflow

--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -133,4 +133,7 @@ jobs:
           nohup sh -c "while true ; do gcloud compute start-iap-tunnel ${{ env.DPLATFORM }}-bastion 3128 --local-host-port localhost:57755 --project ${{ env.PROJECT_ID }}  --zone ${{ inputs.zone }}  ; done" &
           sleep 4
           kubectl cluster-info
+          # TODO remove me
+          pwd
+          ls -la
           make ${{ inputs.command }}
