feature(p2p): propagate `checkout-version` parameter to outer workflow

--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -101,6 +101,7 @@ jobs:
       with:
         tag: ${{ inputs.version-prefix }}${{ steps.semvers.outputs.patch }}
         tag_exists_error: true
+        commit_sha: ${{ steps.githashes.outputs.current_hash }}
 
     - name: Set bumped version in output
       id: setversion
