--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -93,6 +93,8 @@ jobs:
         echo "current_hash=${HASH}" >> "$GITHUB_OUTPUT"
         echo "previous_tag_hash=${LAST_TAG_HASH}" >> "$GITHUB_OUTPUT"
        
+        
+        echo "Some new message!!!"
 
     - name: Create tag
       uses: rickstaa/action-create-tag@v1
