--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -25,7 +25,11 @@ on:
         required: false
         type: string
         default: 'v'
-      
+      checkout-version:
+        required: false
+        type: string
+        default: ''
+
 
 jobs:
   increment-version:
@@ -38,7 +42,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: 0  
+        fetch-depth: 0
+        ref: ${{ inputs.checkout-version }}
     - name: Configure Git
       run: |
         git config user.name "$GITHUB_ACTOR"
@@ -87,7 +92,6 @@ jobs:
 
         echo "current_hash=${HASH}" >> "$GITHUB_OUTPUT"
         echo "previous_tag_hash=${LAST_TAG_HASH}" >> "$GITHUB_OUTPUT"
-       
 
     - name: Create tag
       uses: rickstaa/action-create-tag@v1
@@ -96,6 +100,7 @@ jobs:
       with:
         tag: ${{ inputs.version-prefix }}${{ steps.semvers.outputs.patch }}
         tag_exists_error: true
+        commit_sha: ${{ steps.githashes.outputs.current_hash }}
 
     - name: Set bumped version in output
       id: setversion
