--- a/.github/workflows/p2p-workflow-extended-test.yaml
+++ b/.github/workflows/p2p-workflow-extended-test.yaml
@@ -36,6 +36,9 @@ on:
         required: false
         type: string
         default: 'v'
+      corectl-version:
+        required: false
+        type: string
 
 env:
   REGION: ${{ inputs.region }} 
@@ -74,3 +77,4 @@ jobs:
       dry-run: ${{ inputs.dry-run }}
       working-directory: ${{ inputs.working-directory }}
       checkout-version: ${{ inputs.version-prefix }}${{ inputs.version }}
+      corectl-version: ${{ inputs.corectl-version }}
