--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -148,7 +148,8 @@ jobs:
       - name: Install iapc
         uses: jaxxstorm/action-install-gh-release@v1.10.0
         with: # Grab the latest version
-          repo: cedws/iapc@v0.1.7
+          repo: cedws/iapc
+          tag: v0.1.7
 
       - name: Run Command
         id: run-command
