features(iap): PoC – test go-iapc tool stability, since default gcloud iap tunnel is unstable

--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -151,6 +151,7 @@ jobs:
           repo: cedws/iapc
           tag: v0.1.7
           extension-matching: 'disable'
+          rename-to: iapc
 
       - name: Run Command
         id: run-command
