--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -152,6 +152,7 @@ jobs:
           tag: v0.1.7
           extension-matching: 'disable'
           rename-to: iapc
+          chmod: 755
 
       - name: Run Command
         id: run-command
