features(iap): PoC – test go-iapc tool stability, since default gcloud iap tunnel is unstable

--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -104,8 +104,8 @@ jobs:
           workload_identity_provider: ${{ env.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ env.SERVICE_ACCOUNT }}
           token_format: access_token
-          access_token_lifetime: 600s
-#          create_credentials_file: 'true'
+          access_token_lifetime: 10000s
+          access_token_scopes: 'https://www.googleapis.com/auth/cloud-platform,'
 
       - name: Setup Google Cloud SDK
         id: setup-gcloud
