--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -148,8 +148,8 @@ jobs:
       - name: Install iapc
         uses: jaxxstorm/action-install-gh-release@v1.10.0
         with: # Grab the latest version
-          repo: cedws/iapc
-          tag: v0.1.7
+          repo: cecg/iapc
+          tag: v0.1.8
           extension-matching: 'disable'
           rename-to: iapc
           chmod: 755
