features(iap): PoC – test go-iapc tool stability, since default gcloud iap tunnel is unstable

--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -148,7 +148,7 @@ jobs:
       - name: Install iapc
         uses: jaxxstorm/action-install-gh-release@v1.10.0
         with: # Grab the latest version
-          repo: cecg/iapc
+          repo: coreeng/iapc
           tag: v0.1.8
           extension-matching: 'disable'
           rename-to: iapc
