--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -148,7 +148,7 @@ jobs:
       - name: Install iapc
         uses: jaxxstorm/action-install-gh-release@v1.10.0
         with:
-          repo: coreeng/iapc
+          repo: cedws/iapc
           tag: v0.1.8
           extension-matching: 'disable'
           rename-to: iapc
