--- a/.github/workflows/internal-version.yaml
+++ b/.github/workflows/internal-version.yaml
@@ -27,7 +27,7 @@ on:
 jobs:
   increment-version:
     name: increment-version
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       version: ${{ steps.setversion.outputs.patch }}
       
