--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -13,7 +13,7 @@ jobs:
       git-token: ${{ secrets.GITHUB_TOKEN }}
 
   fail:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: github.event.action == 'failure'
     steps:
       - name: Exit with error
