--- a/.github/workflows/platform-environment-feature-matrix.yaml
+++ b/.github/workflows/platform-environment-feature-matrix.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   generate:
     name: generate
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       matrix: ${{ steps.generate-matrix.outputs.matrix }}
     steps:
